syntax = "proto3";

package com.improving.app.tenant.domain;
import "scalapb/scalapb.proto";
import "com/improving/app/common/domain/address.proto";
import "com/improving/app/common/domain/tenantId.proto";
import "com/improving/app/common/domain/memberId.proto";
import "com/improving/app/common/domain/organizationId.proto";
import "com/improving/app/tenant/domain/tenantTypeDefinitions.proto";

option (scalapb.options) = {
  no_default_values_in_constructor: true
};

message EstablishTenant {
  com.improving.app.common.domain.TenantId tenant_id = 1;
  com.improving.app.common.domain.MemberId establishing_user = 2;
  TenantInfo tenant_info = 3;
}

message TenantEstablished {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.TenantId tenant_id = 1;
  TenantMetaInfo meta_info = 2;
  TenantInfo tenant_info = 3;
}

message ActivateTenant {
  com.improving.app.common.domain.TenantId tenant_id = 1;
  com.improving.app.common.domain.MemberId activating_user = 2;
}

message TenantActivated {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.TenantId tenant_id = 1;
  TenantMetaInfo meta_info = 2;
}

message SuspendTenant {
  com.improving.app.common.domain.TenantId tenant_id = 1;
  string suspension_reason = 2;
  com.improving.app.common.domain.MemberId suspending_user = 3;
}

message TenantSuspended {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.TenantId tenant_id = 1;
  TenantMetaInfo meta_info = 2;
  string suspension_reason = 3;
}

message EditInfo {
  com.improving.app.common.domain.TenantId tenant_id = 1;
  com.improving.app.common.domain.MemberId editing_user = 2;
  TenantInfo info_to_update = 3;
}

message InfoEdited {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  com.improving.app.common.domain.TenantId tenant_id = 1;
  TenantMetaInfo meta_info = 2;
  TenantInfo old_info = 3;
  TenantInfo new_info = 4;
}

message TenantRequest {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  oneof sealed_value {
    EstablishTenant establish_tenant_value = 1;
    ActivateTenant activate_tenant_value = 2;
    SuspendTenant suspend_tenant_value = 3;
    EditInfo edit_info_value = 4;
  }
}

message TenantEvent {
  option (scalapb.message).extends = "com.improving.app.common.serialize.PBMsgSerializable";
  oneof sealed_value {
    TenantEstablished tenant_established_value = 1;
    TenantActivated tenant_activated_value = 2;
    TenantSuspended tenant_suspended_value = 3;
    InfoEdited info_edited_value = 4;
  }
}